// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render tests AddToCart renders correctly 1 1`] = `
<div
  className="outOfStock"
>
  <select
    className="sizeOptions"
    isDisabled={true}
  >
    <option>
      OUT OF STOCK
    </option>
  </select>
  <select
    className="amountOptions"
  >
    <option
      value="-"
    >
      -
    </option>
  </select>
</div>
`;

exports[`render tests AddToCart renders correctly 2 1`] = `
<div
  className="addToCart"
>
  <p
    className="sizeAlert"
  />
  <form>
    <select
      className="sizeOptions"
      onChange={[Function]}
    >
      <option
        value="Select Size"
      >
        Select Size
      </option>
      <option
        value="M"
      >
        M
      </option>
    </select>
    <select
      className="amountOptions"
      onChange={[Function]}
    >
      <option
        value="-"
      >
        -
      </option>
    </select>
    <button
      className="cartButton"
      onClick={[Function]}
      type="button"
    >
      Add to Cart
    </button>
  </form>
</div>
`;

exports[`render tests AddToCart renders correctly 3 1`] = `
<div
  className="addToCart"
>
  <p
    className="sizeAlert"
  />
  <form>
    <select
      className="sizeOptions"
      onChange={[Function]}
    >
      <option
        value="Select Size"
      >
        Select Size
      </option>
      <option
        value="M"
      >
        M
      </option>
    </select>
    <select
      className="amountOptions"
      onChange={[Function]}
    >
      <option
        value={1}
      >
        1
      </option>
      <option
        value={2}
      >
        2
      </option>
      <option
        value={3}
      >
        3
      </option>
      <option
        value={4}
      >
        4
      </option>
      <option
        value={5}
      >
        5
      </option>
    </select>
    <button
      className="cartButton"
      onClick={[Function]}
      type="button"
    >
      Add to Cart
    </button>
  </form>
</div>
`;

exports[`render tests AddToCart renders correctly 4 1`] = `
<div
  className="addToCart"
>
  <p
    className="sizeAlert"
  />
  <form>
    <select
      className="sizeOptions"
      onChange={[Function]}
    >
      <option
        value="Select Size"
      >
        Select Size
      </option>
      <option
        value="M"
      >
        M
      </option>
    </select>
    <select
      className="amountOptions"
      onChange={[Function]}
    >
      <option
        value={1}
      >
        1
      </option>
      <option
        value={2}
      >
        2
      </option>
      <option
        value={3}
      >
        3
      </option>
      <option
        value={4}
      >
        4
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={10}
      >
        10
      </option>
      <option
        value={11}
      >
        11
      </option>
      <option
        value={12}
      >
        12
      </option>
      <option
        value={13}
      >
        13
      </option>
      <option
        value={14}
      >
        14
      </option>
      <option
        value={15}
      >
        15
      </option>
    </select>
    <button
      className="cartButton"
      onClick={[Function]}
      type="button"
    >
      Add to Cart
    </button>
  </form>
</div>
`;

exports[`render tests ImageGallery renders correctly 1 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.7,
          }
        }
      />
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      alt={
        Array [
          "./assets/checkmark.png",
          0,
        ]
      }
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "auto",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 2 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.7,
          }
        }
      />
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <img
      alt={
        Array [
          "./assets/checkmark.png",
          0,
        ]
      }
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "zoom-in",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 3 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.7,
          }
        }
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="imageGalleryNext"
      onClick={[Function]}
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      alt={
        Array [
          "./assets/checkmark.png",
          0,
        ]
      }
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "auto",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 4 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
      onClick={[Function]}
    >
      〈
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="imageGalleryNext"
      onClick={[Function]}
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      alt={
        Array [
          "./assets/checkmark.png",
          0,
        ]
      }
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "auto",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 5 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
      onClick={[Function]}
    >
      〈
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={NaN}
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      alt={
        Array [
          "./assets/checkmark.png",
          0,
        ]
      }
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "zoom-in",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 1 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div />
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 2 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div
      className="imageGalleryNext"
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 3 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
    onClick={[Function]}
  >
    <button
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
    >
      〈
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div
      className="imageGalleryNext"
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 4 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
    >
      〈
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 5 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
    onClick={[Function]}
  >
    <button
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
    >
      〈
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div
      className="imageGalleryNext"
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(2.5)",
        "transformOrigin": "0px 0px",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Overview renders correctly 1`] = `null`;

exports[`render tests ProductDetails renders correctly 1 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <div
    id="rating"
  >
    <div
      className="starRating"
    >
      <div
        className="sc-bczRLJ fmEfHf"
      >
        <div
          className="sc-gsnTZi bRVXLD"
        >
          <div
            className="sc-dkzDqf gGtFEz"
            width="NaN%"
          />
        </div>
      </div>
    </div>
    <div
      onClick={[Function]}
    >
      <h3
        className="totalRatings"
      >
        Read all 
        NaN
         review(s)
      </h3>
    </div>
  </div>
  <h3
    id="price"
  >
    $undefined
  </h3>
  <p
    id="overview"
  />
  <button
    aria-label="facebook"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#3b5998"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="twitter"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#00aced"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="pinterest"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#cb2128"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
        fill="white"
      />
    </svg>
  </button>
</div>
`;

exports[`render tests ProductDetails renders correctly 2 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <h3
    id="price"
  >
    $undefined
  </h3>
  <p
    id="overview"
  />
  <button
    aria-label="facebook"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#3b5998"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="twitter"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#00aced"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="pinterest"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#cb2128"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
        fill="white"
      />
    </svg>
  </button>
</div>
`;

exports[`render tests ProductDetails renders correctly 3 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <div
    id="rating"
  >
    <div
      className="starRating"
    >
      <div
        className="sc-bczRLJ fmEfHf"
      >
        <div
          className="sc-gsnTZi bRVXLD"
        >
          <div
            className="sc-dkzDqf gGtFEz"
            width="NaN%"
          />
        </div>
      </div>
    </div>
    <div
      onClick={[Function]}
    >
      <h3
        className="totalRatings"
      >
        Read all 
        NaN
         review(s)
      </h3>
    </div>
  </div>
  <div
    className="saleOutlay"
  >
    <h3
      id="nonPrice"
    >
      $undefined
    </h3>
    <h3
      id="salesPrice"
    >
      5
    </h3>
  </div>
  <p
    id="overview"
  />
  <button
    aria-label="facebook"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#3b5998"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="twitter"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#00aced"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="pinterest"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#cb2128"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
        fill="white"
      />
    </svg>
  </button>
</div>
`;

exports[`render tests ProductDetails renders correctly 4 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <div
    className="saleOutlay"
  >
    <h3
      id="nonPrice"
    >
      $undefined
    </h3>
    <h3
      id="salesPrice"
    >
      5
    </h3>
  </div>
  <p
    id="overview"
  />
  <button
    aria-label="facebook"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#3b5998"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="twitter"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#00aced"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
        fill="white"
      />
    </svg>
  </button>
  <button
    aria-label="pinterest"
    className="react-share__ShareButton share"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "color": "inherit",
        "cursor": "pointer",
        "font": "inherit",
        "padding": 0,
      }
    }
  >
    <svg
      className="share"
      height={64}
      viewBox="0 0 64 64"
      width={64}
    >
      <rect
        fill="#cb2128"
        height="64"
        rx={0}
        ry={0}
        style={Object {}}
        width="64"
      />
      <path
        d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z"
        fill="white"
      />
    </svg>
  </button>
</div>
`;

exports[`render tests StyleSelector renders correctly 1 1`] = `
<div
  className="styleSelector"
>
  <p
    className="currentStyleSelector"
  />
</div>
`;

exports[`render tests StyleSelector renders correctly 2 1`] = `
<div
  className="styleSelector"
>
  <p
    className="currentStyleSelector"
  >
    exampleName
  </p>
  <div
    className="styleOption"
  >
    <img
      alt="1"
      onClick={[Function]}
      src={Object {}}
    />
  </div>
</div>
`;

exports[`render tests StyleSelector renders correctly 3 1`] = `
<div
  className="styleSelector"
>
  <p
    className="currentStyleSelector"
  >
    exampleName
  </p>
  <div
    className="styleOption"
  >
    <img
      alt="1"
      onClick={[Function]}
      src={Object {}}
    />
  </div>
</div>
`;
